# opencvCmake

./: CMakeLists.txt  main.cpp
